--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,12 @@
   "name": "Redmine OMG",
   "version": "1.0.0",
   "description": "Extension to help with Redmine development",
-  "permissions": ["tabs", "https://sysops-redmine.storyful.com/*", "storage"],
+  "permissions": [
+    "tabs",
+    "https://sysops-redmine.storyful.com/*",
+    "https://redmine.storyful.com/*",
+    "storage"
+  ],
   "icons": {
     "16": "images/16.png",
     "32": "images/32.png",
@@ -14,11 +19,12 @@
     "page": "options.html",
     "open_in_tab": false
   },
-  "content_scripts": [
-    {
-      "matches": ["https://sysops-redmine.storyful.com/*"],
-      "css": ["content.css"],
-      "js": ["config/config.js", "content.js"]
-    }
-  ]
+  "content_scripts": [{
+    "matches": [
+      "https://sysops-redmine.storyful.com/*",
+      "https://redmine.storyful.com/*"
+    ],
+    "css": ["content.css"],
+    "js": ["config/config.js", "content.js"]
+  }]
 }
